[package]
name = "tokio01-test"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
license = "MIT"
repository = "https://github.com/LucioFranco/tokio01-test"
homepage = "https://github.com/LucioFranco/tokio01-test"
documentation = "https://docs.rs/tokio01-test/0.1.0/tokio01_test"
description = """
Testing utilities for Tokio and futures-based code
"""
categories = ["asynchronous", "testing"]

[dependencies]
futures = "0.1"
tokio-timer = "0.2"
tokio-executor = "0.1"
